--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -325,9 +325,9 @@
               <td colspan="2"><input type="email" class="form-control form-control-user" id="exampleEmail" placeholder="Email"></td>
             <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleCodPostal" placeholder="C&oacute;digo Postal"></td>
             <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td>Enfermedades cardiacas</td>
+            <td><input name="Si" type="checkbox" value="1"> Si</td>
+            <td><input name="No" type="checkbox" value="0"> No</td>
           </tr>
           <tr>
             <td><select style="border-bottom:1px" class="form-control form-control-user" name="exampleProvincia">
@@ -343,25 +343,25 @@
                         	<option>Guayaquil</option>
                     		</select></td>
             <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td>Accidentes cerebrovasculares, epilesia, lipotimias o desmayos</td>
+            <td><input name="Si" type="checkbox" value="1"> Si</td>
+            <td><input name="No" type="checkbox" value="0"> No</td>
           </tr>
           <tr>
             <td colspan="2"><input type="text" class="form-control form-control-user" id="examplePacDonar" placeholder="Paciente a donar"></td>
             <td colspan="2">&nbsp;</td>
             <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td>Anemias, transtornos de coagulaci&oacute;n, C&eacute;ncer</td>
+            <td><input name="Si" type="checkbox" value="1"> Si</td>
+            <td><input name="No" type="checkbox" value="0"> No</td>
           </tr>
           <tr>
             <td colspan="2">&nbsp;&nbsp;Guardar mi Ubicaci&oacute;n &nbsp;<a href="NuevoDonante.html"><img src="https://i.ibb.co/2Ywympd/logo.png" alt="logo" border="0" width="30px" height="30px"></a></td>
             <td colspan="2">&nbsp;</td>
             <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td>Enfermedades renales, diabetes, &uacute;lcera</td>
+            <td><input name="Si" type="checkbox" value="1"> Si</td>
+            <td><input name="No" type="checkbox" value="0"> No</td>
           </tr>
           <tr>
             <td colspan="2">&nbsp;</td>
