--- a/Nosotros.html
+++ b/Nosotros.html
@@ -272,7 +272,8 @@
         <div class="container-fluid">
 
           <!-- Page Heading -->
-          <a href="https://ibb.co/TMGwjjg"><img src="https://i.ibb.co/qY8Dqqr/donacio-n-sangre.jpg" alt="donacio-n-sangre" width="1075" height="232" border="0"></a>
+          
+         <div align="center"> <a href="https://ibb.co/TMGwjjg"><img src="https://i.ibb.co/qY8Dqqr/donacio-n-sangre.jpg" alt="donacio-n-sangre" width="1086" height="232" border="0"></a></div>
 
         </div>
         <!-- /.container-fluid -->
