--- a/Nosotros.html
+++ b/Nosotros.html
@@ -273,7 +273,10 @@
 
           <!-- Page Heading -->
           
-         <div align="center"> <a href="https://ibb.co/TMGwjjg"><img src="https://i.ibb.co/qY8Dqqr/donacio-n-sangre.jpg" alt="donacio-n-sangre" width="1086" height="232" border="0"></a></div>
+         <div align="center"><a><img src="https://i.ibb.co/qY8Dqqr/donacio-n-sangre.jpg" alt="donacio-n-sangre" width="1086" height="232" border="0"></a></div>
+         
+         <div align="center"><h1>CRUZ ROJA</h1></div><TR>
+         <div align="center"><h1>SISTEMA DE DONACIONES</h1></div>
 
         </div>
         <!-- /.container-fluid -->
