--- a/Nosotros.html
+++ b/Nosotros.html
@@ -64,7 +64,7 @@
           <i class="fas fa-fw fa-folder"></i>
           <span>M&eacute;dico</span>
         </a>
-        <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+        <div id="collapsePages1" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <a class="collapse-item" href="ListadoDonantes.html">Listado Donantes</a>            
           </div>
