--- a/ListadoDonantes.html
+++ b/ListadoDonantes.html
@@ -135,7 +135,10 @@
               </a>
               <!-- Dropdown - Messages -->
               <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in" aria-labelledby="searchDropdown">
-              </div>
+                <form class="form-inline mr-auto w-100 navbar-search">
+                  <div class="input-group">
+                    
+                  </div>
                 </form>
               </div>
             </li>
