--- a/ListadoDonantes.html
+++ b/ListadoDonantes.html
@@ -47,7 +47,7 @@
       <li class="nav-item" >
         <a class="nav-link" href="Nosotros.html">
           <i class="fas fa-fw fa-chart-area"></i>
-          <span>Nosotros</span></a>
+          <span>Inicio</span></a>
       </li>
 
       <li class="nav-item active">
