--- a/Nosotros.html
+++ b/Nosotros.html
@@ -44,7 +44,7 @@
       <li class="nav-item active" >
         <a class="nav-link" href="Nosotros.html">
           <i class="fas fa-fw fa-chart-area"></i>
-          <span>Nosotros</span></a>
+          <span>Inicio</span></a>
       </li>
 
       <li class="nav-item">
