--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
         </a>
         <div id="collapsePages1" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <a class="collapse-item" href="ListadoDonantes.html">Listado Donantes</a>            
+            <a class="collapse-item" href="ListadoDonantes.html">Listado Donantes</a>    
+            <a class="collapse-item" href="AgendaDoctor.html">Agenda</a>        
           </div>
         </div>
       </li>
@@ -260,7 +261,7 @@
             <!-- Nav Item - User Information -->
             <li class="nav-item dropdown no-arrow">
               <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Valerie Luna</span>
+                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Administrador</span>
                 <img class="img-profile rounded-circle" src="https://i.ibb.co/8DRJBHB/Usuario-EFZ.png">
               </a>
               <!-- Dropdown - User Information -->
