--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -66,7 +66,8 @@
         </a>
         <div id="collapsePages1" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <a class="collapse-item" href="ListadoDonantes.html">Listado Donantes</a>            
+            <a class="collapse-item" href="ListadoDonantes.html">Listado Donantes</a>      
+            <a class="collapse-item" href="AgendaDoctor.html">Agenda</a>        
           </div>
         </div>
       </li>
