--- a/AgendaDoctor.html
+++ b/AgendaDoctor.html
@@ -9,17 +9,17 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <link href='https://use.fontawesome.com/releases/v5.0.6/css/all.css' rel='stylesheet'>
-<link href='../packages/core/main.css' rel='stylesheet' />
-<link href='../packages/bootstrap/main.css' rel='stylesheet' />
-<link href='../packages/timegrid/main.css' rel='stylesheet' />
-<link href='../packages/daygrid/main.css' rel='stylesheet' />
-<link href='../packages/list/main.css' rel='stylesheet' />
-<script src='../packages/core/main.js'></script>
-<script src='../packages/interaction/main.js'></script>
-<script src='../packages/bootstrap/main.js'></script>
-<script src='../packages/daygrid/main.js'></script>
-<script src='../packages/timegrid/main.js'></script>
-<script src='../packages/list/main.js'></script>
+<link href='../fullcalendar-4.4.0/packages/core/main.css' rel='stylesheet' />
+<link href='../fullcalendar-4.4.0/packages/bootstrap/main.css' rel='stylesheet' />
+<link href='../fullcalendar-4.4.0/packages/timegrid/main.css' rel='stylesheet' />
+<link href='../fullcalendar-4.4.0/packages/daygrid/main.css' rel='stylesheet' />
+<link href='../fullcalendar-4.4.0/packages/list/main.css' rel='stylesheet' />
+<script src='../fullcalendar-4.4.0/packages/core/main.js'></script>
+<script src='../fullcalendar-4.4.0/packages/interaction/main.js'></script>
+<script src='../fullcalendar-4.4.0/packages/bootstrap/main.js'></script>
+<script src='../fullcalendar-4.4.0/packages/daygrid/main.js'></script>
+<script src='../fullcalendar-4.4.0/packages/timegrid/main.js'></script>
+<script src='../fullcalendar-4.4.0/packages/list/main.js'></script>
 <script src='js/theme-chooser.js'></script>
 <script>
 
