--- a/AgendaDoctor.html
+++ b/AgendaDoctor.html
@@ -18,13 +18,13 @@
 
   <!-- Custom styles for this template-->
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
-  <link href='../packages/core/main.css' rel='stylesheet' />
-<link href='../packages/daygrid/main.css' rel='stylesheet' />
-<link href='../packages/timegrid/main.css' rel='stylesheet' />
-<script src='../packages/core/main.js'></script>
-<script src='../packages/interaction/main.js'></script>
-<script src='../packages/daygrid/main.js'></script>
-<script src='../packages/timegrid/main.js'></script>
+  <link href='../fullcalendar-4.4.0/packages/core/main.css' rel='stylesheet' />
+<link href='../fullcalendar-4.4.0/packages/daygrid/main.css' rel='stylesheet' />
+<link href='../fullcalendar-4.4.0/packages/timegrid/main.css' rel='stylesheet' />
+<script src='../fullcalendar-4.4.0/packages/core/main.js'></script>
+<script src='../fullcalendar-4.4.0/packages/interaction/main.js'></script>
+<script src='../fullcalendar-4.4.0/packages/daygrid/main.js'></script>
+<script src='../fullcalendar-4.4.0/packages/timegrid/main.js'></script>
 <script>
 
   document.addEventListener('DOMContentLoaded', function() {
