--- a/AgendaDoctor.html
+++ b/AgendaDoctor.html
@@ -400,8 +400,9 @@
         <div class="container-fluid">
 
           <!-- Page Heading -->
-          <h1 class="h3 mb-4 text-gray-800">Blank Page</h1>
-
+          <h1 class="h3 mb-4 text-gray-800">Agenda</h1>
+		  <div id='calendar'></div>
+          
         </div>
         <!-- /.container-fluid -->
 
