--- a/AgendaDoctor.html
+++ b/AgendaDoctor.html
@@ -16,7 +16,7 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
   <meta charset='utf-8' />
-<link href='../fullcalendar-4.4.0/packages/core/main.css' rel='stylesheet' />
+<link href='.../packages/core/main.css' rel='stylesheet' />
 <link href='../fullcalendar-4.4.0/packages/daygrid/main.css' rel='stylesheet' />
 <link href='../fullcalendar-4.4.0/packages/timegrid/main.css' rel='stylesheet' />
 <script src='../fullcalendar-4.4.0/packages/core/main.js'></script>
@@ -400,7 +400,7 @@
         <div class="container-fluid">
 
           <!-- Page Heading -->
-          <h1 class="h3 mb-4 text-gray-800">AgendaS</h1>
+          <h1 class="h3 mb-4 text-gray-800">Agenda</h1>
 		  <div id='calendar'></div>
           
         </div>
