--- a/NuevoPaciente.html
+++ b/NuevoPaciente.html
@@ -297,7 +297,7 @@
         <div class="container-fluid">
 
           <!-- Page Heading -->
-          <h1 class="h3 mb-4 text-gray-800"><b><font style="color:#B03A2E">Nuevo Donante</font></b></h1>
+          <h1 class="h3 mb-4 text-gray-800"><b><font style="color:#B03A2E">Nuevo Paciente</font></b></h1>
           <table class="user" width="100%" >
           <tr>
             <td colspan="4" align="center" style="color:#333;background-color:#CCC;"><b>Datos Personales</b></td>
