--- a/NuevoPaciente.html
+++ b/NuevoPaciente.html
@@ -298,106 +298,21 @@
 
           <!-- Page Heading -->
           <h1 class="h3 mb-4 text-gray-800"><b><font style="color:#B03A2E">Nuevo Paciente</font></b></h1>
-          <table class="user" width="100%" >
+          
+		  <table class="user" width="100%" >
           <tr>
-            <td colspan="4" align="center" style="color:#333;background-color:#CCC;"><b>Datos Personales</b></td>
-            <td>&nbsp;</td>
-            <td colspan="3" align="center" style="color:#333;background-color:#CCC;"><b>Pol&iacute;ticas para el Donante</b></td>
+          	<td colspan="6" align="center" style="color:#333;background-color:#CCC;"><b>Datos Personales</b></td>
           </tr>
           <tr>
-            <td width="16%">&nbsp;</td>
-            <td width="9%">&nbsp;</td>
-            <td width="8%">&nbsp;</td>
-            <td width="18%">&nbsp;</td>
-            <td>&nbsp;</td>
-            <td colspan="3" style="color:#333;background-color:#E9E9E9;"><b>Condiciones Generales</b></td>
-            </tr>
-          <tr>
-            <td colspan="2"><input type="number" class="form-control form-control-user" id="exampleCedula" placeholder="C&eacute;dula"></td>
-            <td colspan="2"><select style="border-bottom:1px" class="form-control form-control-user" name="exampleProvincia">
-                        	<option selected>G&eacute;nero</option>
-                        	<option>Masculino</option>
-                            <option>Femenino</option>
-                    		</select></td>
-            <td width="3%">&nbsp;</td>
-            <td width="35%">¿Don&oacute; sangre en los 3 &uacute;ltimos a&ntilde;os?</td>
-            <td width="5%"><input name="Si" type="checkbox" value="1"> Si</td>
-            <td width="6%"><input name="No" type="checkbox" value="0"> No</td>
-          </tr>
-          <tr>
-            <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleFirstName" placeholder="Nombre"></td>
-            <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Apellido"></td>
-            <td>&nbsp;</td>
-            <td>¿En los 12 &uacute;ltimos meses ha donado sangre a esta Instituci&oacute;n?</td>
-            <td><input name="Si" type="checkbox" value="1"> Si</td>
-            <td><input name="No" type="checkbox" value="0"> No</td>
-          </tr>
-          <tr>
-              <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleLugNac" placeholder="Lugar de Nacimiento"></td>
-            <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleLocalidad" placeholder="Localidad"></td>
-            <td>&nbsp;</td>
-            <td>¿Ha donado sangre los 2 &uacute;ltimos meses?</td>
-            <td><input name="Si" type="checkbox" value="1"> Si</td>
-            <td><input name="No" type="checkbox" value="0"> No</td>
-          </tr>
-          <tr>
-              <td colspan="2"><input type="date" class="form-control form-control-user" id="exampleFecNac" placeholder="Fecha Nacimiento"></td>
-            <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleTelefono" placeholder="Tel&eacute;fono"></td>
-            <td>&nbsp;</td>
-            <td colspan="3" style="color:#333;background-color:#E9E9E9;"><b>Impedimentos para donar</b></td>
-            </tr>
-          <tr>
-              <td colspan="2"><input type="email" class="form-control form-control-user" id="exampleEmail" placeholder="Email"></td>
-            <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleCodPostal" placeholder="C&oacute;digo Postal"></td>
-            <td>&nbsp;</td>
-            <td>Enfermedades cardiacas</td>
-            <td><input name="Si" type="checkbox" value="1"> Si</td>
-            <td><input name="No" type="checkbox" value="0"> No</td>
-          </tr>
-          <tr>
-            <td><select style="border-bottom:1px" class="form-control form-control-user" name="exampleProvincia">
-                        	<option selected>Provincia</option>
-                        	<option>Guayas</option>
-                    		</select></td>
-            <td colspan="2"><select style="border-bottom:1px" class="form-control form-control-user" name="exampleCiudad">
-                        	<option selected>Ciudad</option>
-                        	<option>Guayaquil</option>
-                    		</select></td>
-            <td><select style="border-bottom:1px" class="form-control form-control-user" name="exampleCanton">
-                        	<option selected>Cant&oacute;n</option>
-                        	<option>Guayaquil</option>
-                    		</select></td>
-            <td>&nbsp;</td>
-            <td>Accidentes cerebrovasculares, epilesia, lipotimias o desmayos</td>
-            <td><input name="Si" type="checkbox" value="1"> Si</td>
-            <td><input name="No" type="checkbox" value="0"> No</td>
-          </tr>
-          <tr>
-            <td colspan="2"><input type="text" class="form-control form-control-user" id="examplePacDonar" placeholder="Paciente a donar"></td>
-            <td colspan="2">&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>Anemias, transtornos de coagulaci&oacute;n, C&eacute;ncer</td>
-            <td><input name="Si" type="checkbox" value="1"> Si</td>
-            <td><input name="No" type="checkbox" value="0"> No</td>
-          </tr>
-          <tr>
-            <td colspan="2">&nbsp;&nbsp;Guardar mi Ubicaci&oacute;n &nbsp;<a href="NuevoDonante.html"><img src="https://i.ibb.co/2Ywympd/logo.png" alt="logo" border="0" width="30px" height="30px"></a></td>
-            <td colspan="2">&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>Enfermedades renales, diabetes, &uacute;lcera</td>
-            <td><input name="Si" type="checkbox" value="1"> Si</td>
-            <td><input name="No" type="checkbox" value="0"> No</td>
-          </tr>
-          <tr>
-            <td colspan="2">&nbsp;</td>
-            <td colspan="2">&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-          </tr>
+            <td width="8%">Unidad m&eacute;dica:</td>
+            <td width="46%">&nbsp;</td>
+            <td width="8%">N&ordm; Carta:</td>
+            <td width="15%">&nbsp;</td>
+            <td width="8%">Fecha</td>
+            <td width="15%">&nbsp;</td>
+          </tr> 
           </table>
-
+          
           <a href="NuevoDonante.html" class="btn btn-danger btn-user btn-block">
                   Registrar
                 </a>
