--- a/NuevoPaciente.html
+++ b/NuevoPaciente.html
@@ -313,7 +313,7 @@
             <td width="23%"><input type="date" class="form-control form-control-user" id="txtFecha" placeholder="Fecha"></td>
           </tr>
           <tr>
-            <td><input type="search" class="form-control form-control-user" id="txtPaciente" placeholder="Paciente"></td>
+            <td><input type="search" class="form-control form-control-user" id="txtPaciente" placeholder="Paciente"><a href="https://imgbb.com/"><img src="https://i.ibb.co/BjsP270/13d99f3d0cf4aec174b5869efa816e13-icono-de-lupa.png" width="25px" height="25px" border="0"></a></td>
             <td><input type="text" class="form-control form-control-user" id="txtEdad" placeholder="Edad"></td>
             <td><select style="border-bottom:1px" class="form-control form-control-user" name="txtUnidMedica">
                         	<option selected>Grupo Sangu&iacute;neo</option>
