--- a/NuevoPaciente.html
+++ b/NuevoPaciente.html
@@ -301,10 +301,10 @@
           
 		  <table class="user" width="100%" >
           <tr>
-          	<td colspan="3" align="center" style="color:#333;background-color:#CCC;"><b>Datos Personales</b></td>
+          	<td colspan="4" align="center" style="color:#333;background-color:#CCC;"><b>Datos Personales</b></td>
           </tr>
           <tr>
-            <td width="49%"><select style="border-bottom:1px" class="form-control form-control-user" name="txtUnidMedica">
+            <td width="49%" colspan="2"><select style="border-bottom:1px" class="form-control form-control-user" name="txtUnidMedica">
                         	<option selected>Centro Medico Guayaquil</option>
                         	<option>Cruz Roja Centro</option>
                             <option>Centro de acopio CRG Norte</option>
@@ -313,7 +313,8 @@
             <td width="23%"><input type="date" class="form-control form-control-user" id="txtFecha" placeholder="Fecha"></td>
           </tr>
           <tr>
-            <td><input type="search" class="form-control form-control-user" id="txtPaciente" placeholder="Paciente"><a href="https://imgbb.com/"><img src="https://i.ibb.co/BjsP270/13d99f3d0cf4aec174b5869efa816e13-icono-de-lupa.png" width="25px" height="25px" border="0"></a></td>
+            <td><input type="text" class="form-control form-control-user" id="txtPaciente" placeholder="Paciente"></td>
+            <td><a href="https://imgbb.com/"><img src="https://i.ibb.co/BjsP270/13d99f3d0cf4aec174b5869efa816e13-icono-de-lupa.png" width="25px" height="25px" border="0"></a></td>
             <td><input type="text" class="form-control form-control-user" id="txtEdad" placeholder="Edad"></td>
             <td><select style="border-bottom:1px" class="form-control form-control-user" name="txtUnidMedica">
                         	<option selected>Grupo Sangu&iacute;neo</option>
