--- a/NuevoPaciente.html
+++ b/NuevoPaciente.html
@@ -358,7 +358,7 @@
             <td colspan="5" style="color:#333;background-color:#E9E9E9;"><b>Detalle de la Solicitud</b></td>
           </tr>
           <tr>
-            <td colspan="5"><table class="table-danger" width="200" border="1">
+            <td colspan="5"><table class="table-danger" align="center" style="color:#000" width="90%" border="1">
                               <tr>
                                 <td>Cantidad</td>
                                 <td>Producto</td>
