--- a/NuevoPaciente.html
+++ b/NuevoPaciente.html
@@ -304,10 +304,13 @@
           	<tr>
             <td colspan="5" style="color:#333;background-color:#E9E9E9;"><b>Carta de Compromiso</b></td>
           </tr>
+          <tr>
+            <td colspan="5" >&nbsp;</td>
+          </tr>
           </tr>
           <tr>
             <td colspan="3"><select style="border-bottom:1px" class="form-control form-control-user" name="txtUnidMedica">
-                        	<option selected>Centro Medico Guayaquil</option>
+                        	<option selected>Centro M&eacute;dico</option>
                         	<option>Cruz Roja Centro</option>
                             <option>Centro de acopio CRG Norte</option>
                     		</select></td>
@@ -340,9 +343,15 @@
             <td colspan="2" ><input type="text" class="form-control form-control-user" id="txtSolicitud" placeholder="Solicitud"></td>
             <td ><input type="text" class="form-control form-control-user" id="txtHematocrito" placeholder="Hematocrito"></td>
             <td ><input type="text" class="form-control form-control-user" id="txtHemoglobina" placeholder="Hemoglobina"></td>
+          </tr>
+          <tr>
+            <td colspan="5" >&nbsp;</td>
           </tr> 
           <tr>
             <td colspan="5" style="color:#333;background-color:#E9E9E9;"><b>Datos del Familiar</b></td>
+          </tr>
+          <tr>
+            <td colspan="5" >&nbsp;</td>
           </tr>
           <tr>
             <td colspan="3"><input type="text" class="form-control form-control-user" id="txtNombre" placeholder="Nombre"></td>
@@ -355,23 +364,29 @@
             <td ><input type="text" class="form-control form-control-user" id="txtDelegacion" placeholder="Delegaci&oacute;n"></td>
           </tr>
           <tr>
+            <td colspan="5" >&nbsp;</td>
+          </tr>
+          <tr>
             <td colspan="5" style="color:#333;background-color:#E9E9E9;"><b>Detalle de la Solicitud</b></td>
           </tr>
           <tr>
+            <td colspan="5" >&nbsp;</td>
+          </tr>
+          <tr>
             <td colspan="5"><table class="table-danger" align="center" style="color:#000" width="90%" border="1">
-                              <tr>
+                              <tr bordercolor="#CCCCCC">
                                 <td>Cantidad</td>
                                 <td>Producto</td>
                                 <td>No. de Registro</td>
                               </tr>
           </table>
           
-                              <tr>
+                              <tr bordercolor="#CCCCCC">
                                 <td>&nbsp;</td>
                                 <td>&nbsp;</td>
                                 <td>&nbsp;</td>
                               </tr>
-                              <tr>
+                              <tr bordercolor="#CCCCCC">
                                 <td>&nbsp;</td>
                                 <td>&nbsp;</td>
                                 <td>&nbsp;</td>
