--- a/NuevoPaciente.html
+++ b/NuevoPaciente.html
@@ -364,23 +364,20 @@
             <td colspan="5" style="color:#333;background-color:#E9E9E9;"><b>Detalle de la Solicitud</b></td>
           </tr>
           <tr>
-            <td colspan="5" >&nbsp;</td>
-          </tr>
-          <tr>
             <td colspan="5"><table class="table-danger" align="center" style="color:#000" width="90%" border="1">
-                              <tr bordercolor="#CCCCCC">
+                              <tr style="border-color:#CCC">
                                 <td>Cantidad</td>
                                 <td>Producto</td>
                                 <td>No. de Registro</td>
                               </tr>
           </table>
           
-                              <tr bordercolor="#CCCCCC">
+                              <tr style="border-color:#CCC">
                                 <td>&nbsp;</td>
                                 <td>&nbsp;</td>
                                 <td>&nbsp;</td>
                               </tr>
-                              <tr bordercolor="#CCCCCC">
+                              <tr style="border-color:#CCC">
                                 <td>&nbsp;</td>
                                 <td>&nbsp;</td>
                                 <td>&nbsp;</td>
