--- a/NuevoPaciente.html
+++ b/NuevoPaciente.html
@@ -90,17 +90,16 @@
           <span>Estadisticas</span></a>
       </li>
       <!-- Nav Item - Charts -->
-      <li class="nav-item">
-        <a class="nav-link" href="charts.html">
-          <i class="fas fa-fw fa-chart-area"></i>
-          <span>Charts</span></a>
+      <li class="nav-item" >
+        <a class="nav-link" href="Ayuda.html">
+          <i class="fas fa-fw fa-ambulance"></i>
+          <span>Ayuda</span></a>
       </li>
-
-      <!-- Nav Item - Tables -->
-      <li class="nav-item">
-        <a class="nav-link" href="tables.html">
-          <i class="fas fa-fw fa-table"></i>
-          <span>Tables</span></a>
+      
+      <li class="nav-item" >
+        <a class="nav-link" href="Beneficios.html">
+          <i class="fas fa-fw fa-artstation"></i>
+          <span>Beneficios</span></a>
       </li>
 
       <!-- Divider -->
