--- a/NuevoPaciente.html
+++ b/NuevoPaciente.html
@@ -98,7 +98,7 @@
       
       <li class="nav-item" >
         <a class="nav-link" href="Beneficios.html">
-          <i class="fas fa-fw fa-artstation"></i>
+          <i class="fas fa-fw fa-address-card"></i>
           <span>Beneficios</span></a>
       </li>
 
