--- a/NuevoPaciente.html
+++ b/NuevoPaciente.html
@@ -43,7 +43,7 @@
       
       <li class="nav-item" >
         <a class="nav-link" href="Nosotros.html">
-          <i class="fas fa-fw fa-chart-area"></i>
+          <i class="fas fa-fw fa-home"></i>
           <span>Inicio</span></a>
       </li>
 
@@ -84,7 +84,7 @@
         </div>
       </li>
       
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="index.html">
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>Estadisticas</span></a>
