--- a/AgendaDoctor.html
+++ b/AgendaDoctor.html
@@ -156,9 +156,9 @@
       <hr class="sidebar-divider my-0">
 
       <!-- Nav Item - Dashboard -->
-      <li class="nav-item">
+      <li class="nav-item" >
         <a class="nav-link" href="Nosotros.html">
-          <i class="fas fa-fw fa-chart-area"></i>
+          <i class="fas fa-fw fa-home"></i>
           <span>Inicio</span></a>
       </li>
 
@@ -205,13 +205,13 @@
       <!-- Nav Item - Charts -->
       <li class="nav-item" >
         <a class="nav-link" href="Ayuda.html">
-          <i class="fas fa-fw fa-chart-area"></i>
+          <i class="fas fa-fw fa-ambulance"></i>
           <span>Ayuda</span></a>
       </li>
       
       <li class="nav-item" >
         <a class="nav-link" href="Beneficios.html">
-          <i class="fas fa-fw fa-chart-area"></i>
+          <i class="fas fa-fw fa-address-card"></i>
           <span>Beneficios</span></a>
       </li>
 
