--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -43,7 +43,7 @@
       
       <li class="nav-item" >
         <a class="nav-link" href="Nosotros.html">
-          <i class="fas fa-fw fa-chart-area"></i>
+          <i class="fas fa-fw fa-home"></i>
           <span>Inicio</span></a>
       </li>
 
@@ -90,13 +90,13 @@
       <!-- Nav Item - Charts -->
       <li class="nav-item" >
         <a class="nav-link" href="Ayuda.html">
-          <i class="fas fa-fw fa-chart-area"></i>
+          <i class="fas fa-fw fa-ambulance"></i>
           <span>Ayuda</span></a>
       </li>
       
       <li class="nav-item" >
         <a class="nav-link" href="Beneficios.html">
-          <i class="fas fa-fw fa-chart-area"></i>
+          <i class="fas fa-fw fa-address-card"></i>
           <span>Beneficios</span></a>
       </li>
 
