--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -82,7 +82,7 @@
         </div>
       </li>
       
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="index.html">
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>Estadisticas</span></a>
