--- a/register.html
+++ b/register.html
@@ -54,7 +54,7 @@
                     <input type="password" class="form-control form-control-user" id="exampleRepeatPassword" placeholder="Repetir Contraseña">
                   </div>
                 </div>
-                <a href="login.html" class="btn btn-primary btn-user btn-block">
+                <a href="login.html" class="btn btn-danger btn-user btn-block">
                   Registrar
                 </a>
                 <hr>
