--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                       <i class="fas fa-circle text-primary"></i> Hombres
                     </span>
                     <span class="mr-2">
-                      <i class="fas fa-circle text-success"></i> Mujeres
+                      <i class="fas fa-circle text-danger"></i> Mujeres
                     </span>
                     <span class="mr-2">
                       <i class="fas fa-circle text-info"></i> No logran donar
