--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Recaudaciones</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">$8,540,719 donado</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800">$8,540,719 </div>
                     </div>
                     <div class="col-auto">
                       <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
@@ -476,7 +476,7 @@
                   <div class="card bg-primary text-white shadow">
                     <div class="card-body">
                       Dona Alegr&iacute;a
-                      <div class="text-white-50 small">#4e73df</div>
+                      <div class="text-white-50 small"></div>
                     </div>
                   </div>
                 </div>
@@ -484,11 +484,26 @@
                   <div class="card bg-success text-white shadow">
                     <div class="card-body">
                       $8,540,719 recaudado
-                      <div class="text-white-50 small">#1cc88a</div>
+                      <div class="text-white-50 small"></div>
                     </div>
                   </div>
                 </div>
-                
+               <div class="col-lg-6 mb-4">
+                  <div class="card bg-info text-white shadow">
+                    <div class="card-body">
+                      Dona Sonrisas
+                      <div class="text-white-50 small"></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-6 mb-4">
+                  <div class="card bg-warning text-white shadow">
+                    <div class="card-body">
+                      Dona Esperanza
+                      <div class="text-white-50 small"></div>
+                    </div>
+                  </div>
+                </div>
               </div>
 
             </div>
