--- a/DonacionSangre.html
+++ b/DonacionSangre.html
@@ -59,7 +59,7 @@
         </div>
       </li>
       
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages3" aria-expanded="true" aria-controls="collapsePages">
           <i class="fas fa-fw fa-folder"></i>
           <span>Paciente</span>
@@ -71,13 +71,14 @@
         </div>
       </li>
       	  
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages1" aria-expanded="true" aria-controls="collapsePages">
           <i class="fas fa-fw fa-folder"></i>
           <span>M&eacute;dico</span>
         </a>
         <div id="collapsePages1" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
+          	<a class="collapse-item" href="DonacionSangre.html">Donaci&oacute;n de Sangre</a>
             <a class="collapse-item" href="ListadoDonantes.html">Listado Donantes</a>      
             <a class="collapse-item" href="AgendaDoctor.html">Agenda</a>        
           </div>
