--- a/ListadoDonantes.html
+++ b/ListadoDonantes.html
@@ -78,6 +78,7 @@
         </a>
         <div id="collapsePages1" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
+          	<a class="collapse-item" href="DonacionSangre.html">Donaci&oacute;n de Sangre</a>
             <a class="collapse-item" href="ListadoDonantes.html">Listado Donantes</a> 
             <a class="collapse-item" href="AgendaDoctor.html">Agenda</a>           
           </div>
