--- a/DonacionSangre.html
+++ b/DonacionSangre.html
@@ -331,7 +331,7 @@
                             <input name="dirigido" type="checkbox" value=""> Dirigido &nbsp;&nbsp;</td>
                             <input name="plaquetaferesis" type="checkbox" value=""> Plaqueta f&eacute;resis &nbsp;&nbsp;</td>
           </tr>
-          
+          </table>
           <a href="NuevoDonante.html" class="btn btn-danger btn-user btn-block">
                   Registrar
                 </a>
