--- a/DonacionSangre.html
+++ b/DonacionSangre.html
@@ -327,8 +327,8 @@
           <tr>
             <td colspan="5"><input name="voluntarioplantel" type="checkbox" value=""> Voluntario Plantel &nbsp;&nbsp;
             				<input name="voluntarioexpontaneo" type="checkbox" value=""> Voluntario Expont&aacute;neo &nbsp;&nbsp;
-                            <input name="autonomo" type="checkbox" value=""> Aut&oacute;logo &nbsp;&nbsp;</td>
-                            <input name="dirigido" type="checkbox" value=""> Dirigido &nbsp;&nbsp;</td>
+                            <input name="autonomo" type="checkbox" value=""> Aut&oacute;logo &nbsp;&nbsp;
+                            <input name="dirigido" type="checkbox" value=""> Dirigido &nbsp;&nbsp;
                             <input name="plaquetaferesis" type="checkbox" value=""> Plaqueta f&eacute;resis &nbsp;&nbsp;</td>
           </tr>
           </table>
