--- a/DonacionSangre.html
+++ b/DonacionSangre.html
@@ -331,6 +331,24 @@
                             <input name="dirigido" type="checkbox" value=""> Dirigido &nbsp;&nbsp;
                             <input name="plaquetaferesis" type="checkbox" value=""> Plaqueta f&eacute;resis &nbsp;&nbsp;</td>
           </tr>
+          <tr>
+            <td colspan="5" style="color:#333;background-color:#E9E9E9;"><b>Informaci&oacute;n Adicional</b></td>
+          </tr>
+          <tr>
+            <td colspan="5"><b>¿Ha recibido transfusiones en algun momento de su vida</b></td>
+            <td ><input name="si" type="checkbox" value=""> Si &nbsp;&nbsp;
+            	 <input name="no" type="checkbox" value=""> No</td>
+          </tr>
+          <tr>
+            <td colspan="5"><b>¿Ha tenido embarazos?</b></td>
+            <td ><input name="si" type="checkbox" value=""> Si &nbsp;&nbsp;
+            	 <input name="no" type="checkbox" value=""> No</td>
+          </tr>
+          <tr>
+            <td colspan="5"><b>¿Ha ingerido aspirina en los 3 ultimos dias?</b></td>
+            <td ><input name="si" type="checkbox" value=""> Si &nbsp;&nbsp;
+            	 <input name="no" type="checkbox" value=""> No</td>
+          </tr>
           </table>
           <a href="NuevoDonante.html" class="btn btn-danger btn-user btn-block">
                   Registrar
