--- a/DonacionSangre.html
+++ b/DonacionSangre.html
@@ -336,17 +336,17 @@
           </tr>
           <tr>
             <td colspan="4"><b>¿Ha recibido transfusiones en algun momento de su vida</b></td>
-            <td ><input name="si" type="checkbox" value=""> Si &nbsp;&nbsp;
+            <td align="center" ><input name="si" type="checkbox" value=""> Si &nbsp;&nbsp;
             	 <input name="no" type="checkbox" value=""> No</td>
           </tr>
           <tr>
             <td colspan="4"><b>¿Ha tenido embarazos?</b></td>
-            <td ><input name="si" type="checkbox" value=""> Si &nbsp;&nbsp;
+            <td align="center" ><input name="si" type="checkbox" value=""> Si &nbsp;&nbsp;
             	 <input name="no" type="checkbox" value=""> No</td>
           </tr>
           <tr>
             <td colspan="4"><b>¿Ha ingerido aspirina en los 3 ultimos dias?</b></td>
-            <td ><input name="si" type="checkbox" value=""> Si &nbsp;&nbsp;
+            <td align="center" ><input name="si" type="checkbox" value=""> Si &nbsp;&nbsp;
             	 <input name="no" type="checkbox" value=""> No</td>
           </tr>
           </table>
