--- a/DonacionSangre.html
+++ b/DonacionSangre.html
@@ -332,6 +332,9 @@
                             <input name="plaquetaferesis" type="checkbox" value=""> Plaqueta f&eacute;resis &nbsp;&nbsp;</td>
           </tr>
           <tr>
+            <td colspan="5" >&nbsp;</td>
+          </tr>
+          <tr>
             <td colspan="5" style="color:#333;background-color:#E9E9E9;"><b>Informaci&oacute;n Adicional</b></td>
           </tr>
           <tr>
