--- a/DonacionSangre.html
+++ b/DonacionSangre.html
@@ -306,7 +306,9 @@
             <td colspan="2"><input type="text" class="form-control form-control-user" id="txtPaciente" placeholder="Paciente"></td>
             <td width="4%"><a href="https://imgbb.com/"><img src="https://i.ibb.co/BjsP270/13d99f3d0cf4aec174b5869efa816e13-icono-de-lupa.png" width="25px" height="25px" border="0"></a></td>
             <td width="35%">&nbsp;</td>
-            <td width="35%">&nbsp;</td>
+            <td width="35%"><a href="Consultar.html" class="btn btn-danger btn-user btn-block">
+                  Consultar
+                </a></td>
           </tr>
           
           <tr>
