--- a/ListadoDonantes.html
+++ b/ListadoDonantes.html
@@ -79,6 +79,7 @@
         <div id="collapsePages1" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
           	<a class="collapse-item" href="DonacionSangre.html">Donaci&oacute;n de Sangre</a>
+            <a class="collapse-item" href="AsignacionPlaqueta.html">Asignaci&oacute;n de Plaquetas</a>
             <a class="collapse-item" href="ListadoDonantes.html">Listado Donantes</a> 
             <a class="collapse-item" href="AgendaDoctor.html">Agenda</a>           
           </div>
