--- a/DonacionSangre.html
+++ b/DonacionSangre.html
@@ -356,7 +356,7 @@
             	 <input name="no" type="checkbox" value=""> No</td>
           </tr>
           </table>
-          <a href="NuevoDonante.html" class="btn btn-danger btn-user btn-block">
+          <a href="DonacionSangre.html" class="btn btn-danger btn-user btn-block">
                   Registrar
                 </a>
           
