--- a/NuevoPaciente.html
+++ b/NuevoPaciente.html
@@ -387,7 +387,7 @@
 		  </td>
           </tr>
           
-          <a href="NuevoDonante.html" class="btn btn-danger btn-user btn-block">
+          <a href="NuevoPaciente.html" class="btn btn-danger btn-user btn-block">
                   Registrar
                 </a>
           
