--- a/AsignacionPlaqueta.html
+++ b/AsignacionPlaqueta.html
@@ -301,7 +301,7 @@
           <h1 class="h3 mb-4 text-gray-800"><b><font style="color:#B03A2E">Donaci&oacute;n de Sangre</font></b></h1>
           <table class="user" width="100%" >
             <tr>
-            <td colspan="4" style="color:#333;background-color:#E9E9E9;"><b>Examen F&iacute;sico (Datos a completar por medicina Transfuncional)</b></td>
+            <td colspan="4" style="color:#333;background-color:#E9E9E9;"><b>Asignaci&oacute;n</b></td>
           </tr>
           <tr>
             <td colspan="2"><input type="text" class="form-control form-control-user" id="txtPaciente" placeholder="Paciente"></td>
