--- a/AsignacionPlaqueta.html
+++ b/AsignacionPlaqueta.html
@@ -310,7 +310,7 @@
           </tr>
           
           <tr>
-            <td colspan="3"><input type="datetime" class="form-control form-control-user" id="txtFecHora" placeholder="Fecha/hora"></td>
+            <td colspan="3"><input type="date" class="form-control form-control-user" id="txtFecha" placeholder="Fecha"></td>
             <td ><select style="border-bottom:1px" class="form-control form-control-user" name="txtUnidMedica">
                         	<option selected>Centro M&eacute;dico</option>
                         	<option>Cruz Roja Centro</option>
